fix: hide explore scrollbar (#156)

--- a/pokinder-frontend/src/page/Explore/Reference/ExploreReferenceCards.module.css
+++ b/pokinder-frontend/src/page/Explore/Reference/ExploreReferenceCards.module.css
@@ -7,6 +7,15 @@
   justify-content: center;
 }
 
+.loader::-webkit-scrollbar {
+  display: none;
+}
+
+.loader {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+}
+
 .row {
   display: flex;
   flex-direction: column;
